--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nexus - Build Amazing Digital Experiences</title>
-    <meta name="description" content="Transform your ideas into reality with Nexus. Create, innovate, and scale your business with our cutting-edge digital platform." />
-    <meta name="author" content="Nexus" />
+    <title>UnifiedHorizon — Business-first legal counsel in India</title>
+    <meta name="description" content="Practice-led advice across corporate transactions, disputes, and regulatory interfaces, presented in a factual format suitable for international teams." />
+    <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="Nexus - Build Amazing Digital Experiences" />
-    <meta property="og:description" content="Transform your ideas into reality with Nexus. Create, innovate, and scale your business with our cutting-edge digital platform." />
+    <meta property="og:title" content="2a23a218-49f3-42ef-b26a-cfeb2f35ed00" />
+    <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
